# university

./: .gitmodules  README.md
Second Semester/Data Structures/Lab2/: CMakeLists.txt  main.cpp
Second Semester/Data Structures/Lab2/Domain/Colectie/: Colection.cpp
Second Semester/Data Structures/Lab2/Domain/Tranzactii/: Repo.cpp
Second Semester/Data Structures/Lab2/Domain/UI/: UI.cpp  UI.h
Second Semester/Data Structures/Lab4/: ATM.cpp  ATM.h  CMakeLists.txt  Colection.cpp  Colection.h  List.h  Node.h  Repo.cpp  Repo.h  TestList.cpp  TestList.h  Tranzactie.cpp  Tranzactie.h  UI.cpp  UI.h  input.txt  main.cpp
Second Semester/Data Structures/Lab4/ATM/: ATM.cpp  ATM.h
Second Semester/Data Structures/Lab4/Colectie/: Colection.cpp  Colection.h
Second Semester/Data Structures/Lab4/List/: List.h
Second Semester/Data Structures/Lab4/UI/: UI.cpp  UI.h
Second Semester/OOP/Lab10/: CMakeLists.txt  main.cpp
Second Semester/OOP/Lab10/App/: UI.cpp  UI.h  entitate.h  exception.h  input.txt  repository.cpp  repositoryFile.h  service.cpp  service.h  test.cpp
Second Semester/OOP/Lab10/App/UI/: UI.cpp  UI.h
Second Semester/OOP/Lab10/App/controller/: service.cpp  service.h
Second Semester/OOP/Lab10/App/domain/: entitate.h
Second Semester/OOP/Lab10/App/repository/: repository.cpp  repositoryFile.h
Second Semester/OOP/Lab10/App/tests/: test.h
Second Semester/OOP/Lab9/: CMakeLists.txt  main.cpp
Second Semester/OOP/Lab9/App/UI/: UI.cpp  UI.h
Second Semester/OOP/Lab9/App/colectie/: Colection.cpp  Colection.h
Second Semester/OOP/Lab9/App/controller/: service.cpp  service.h
Second Semester/OOP/Lab9/App/domain/: entitate.cpp
lab4/: main.py
(+455 files in other folders)
